fix: Change scrollbar colour on light theme partial
- The colour was accidentally set to the dark theme one

--- a/_sass/themes/_light-theme.scss
+++ b/_sass/themes/_light-theme.scss
@@ -11,8 +11,8 @@ $icon-colour: $text-colour;
 $link-colour: $accent-colour;
 $link-hover-colour: lighten($link-colour, 7%);
 
-$scrollbar-background-colour: hsl(240, 7%, 16%);
-$scrollbar-handle-colour: lighten($scrollbar-background-colour, 4%);
+$scrollbar-background-colour: hsl(240, 6%, 87%);
+$scrollbar-handle-colour: darken($scrollbar-background-colour, 10%);
 
 @mixin light-theme {
   html,
